Fixed responsiveness so the headline is displayed on smaller devices too. Changed the nav-bar to say join us, also made the section container in the About us section into a column when it hits 950px.

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ section > hr {
   .top-container {
     flex-direction: column;
     padding: 20px;
-    padding-top: 30%;
+    padding-top: 20%;
   }
 
   .top-left-container, .top-right-container {
@@ -501,7 +501,18 @@ section > hr {
   .nav-left-container {
     margin-left: 0;
   }
-  
+
+  .section-container {
+    flex-direction: column;
+  }
+
 
 }
 
+@media only screen and (max-width: 430px) {
+
+  .top-container {
+    padding-top: 40%;
+  }
+
+}
